# OnSpotML

./: .gitattributes  .gitignore  BCN_Parking_Prediction_PRD_v1.0.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  architecture_diagram.md  correct_json.py  diagnose_ids.py  feature_evaluation_analysis.md  pass.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_geometry_parser.py
.github/workflows/: ci.yml  (+3 more)
behavior_rules/: ml_parking_project.md
config/: README.md
data/: README.md
docs/: data_collection_best_practices.md  key_prediction_variables.md
global_rules/: general_guidelines.md
notebooks/: 01-process-parking-predictions.ipynb  01.2-eda-parking-predictions.ipynb  01.3-eda-parking-predictions.ipynb  02-explore-TRAMS.ipynb  02-static_feature_engineering.ipynb  03-explore-TARIFES.ipynb  04-explore-HORARIS.ipynb  05-explore-merge.ipynb  06-explore-traffic-history.ipynb  07-combine-traffic-history.ipynb  08-explore-traffic-dataset.ipynb  09-traffic-data-quality-audit.ipynb  10-traffic-data-cleaning.ipynb  11-merge-parking-traffic.ipynb  POI-parquet_inspection.ipynb  README.md  analysis_code_2_3_patterns.ipynb  analysis_code_2_3_patterns_summary.md  static_feature_engineering.py  traffic_data_quality_report.txt
planning/: plan_data_exploration.md  plan_feature_engineering.md
reports/: poi_statistics.csv  poi_statistics_local_filtered.csv
src/: README.md
tests/: README.md  conftest.py  test_data_collector.py  test_feature_engineering_v2.py  test_integration_feature_pipeline.py  test_train_baseline.py  test_train_baseline_integration.py
(+43 files in other folders)
